# orvixa

./: .dockerignore  .env.example  30d-evaluation-framework.md  DATASET.md  Dockerfile.dev  M1_VALIDATION_REPORT.md  M2_DELIVERY_REPORT.md  M2_VALIDATION_REPORT.md  M3_DELIVERY_REPORT.md  M3_VALIDATION_REPORT_FINAL.md  M4_DELIVERY_REPORT.md  M4_VALIDATION_REPORT_FINAL.md  Makefile  PHASE1_AUDIT_REPORT.md  PHASE1_FINAL_RESULTS.md  PHASE2_WEB_API.md  PRODUCTION_HARDENING_PLAN.md  PRODUCTION_READINESS_AUDIT.md  README.md  REPRODUCIBILITY_NOTES.md  alembic.ini  docker-compose.dev.yml  docker-compose.prod.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_symbol_ranking.py  0003_tier_changes.py  0004_symbol_metrics_snapshots.py  0005_breadth_snapshots.py  0006_breadth_dispersion_dominance.py
data/real/: BTC_REAL.csv  ETH_REAL.csv
frontend/: index.html
scripts/: bootstrap-env.sh  generate_demo_candles.py
src/orvixa/: __init__.py  config.py  factory.py  logging.py
src/orvixa/analytics/: __init__.py  engine.py  events.py  health.py  indicators.py  regime.py  signals.py  trend.py
src/orvixa/api/: __init__.py  app.py  (+2 more)
tests/: conftest.py  fake_pool.py  test_analytics_engine.py  test_api.py  test_backfill_csv_loader.py  test_batch_writer.py  test_breadth.py  test_db_integration.py  test_events.py  test_feed_contract.py  test_health.py  test_indicators.py  test_normalize.py  test_persistence_candles.py  test_policy_validation.py  test_ranking.py  test_reconnect.py  test_regime.py  test_regime_validation.py  test_repository.py  test_signal_validation.py  test_signals.py  test_symbol_client.py  test_symbol_manager.py  test_trend.py  test_watchlist.py
tests/fixtures/: kline_1m.json
(+35 files in other folders)
