[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orvixa"
version = "0.3.0"
description = "ORVIXA — crypto market intelligence platform (Phase 2: feed + persistence)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "websockets>=12.0",
    "httpx>=0.27",
    "asyncpg>=0.29",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
    "alembic>=1.13",
    "sqlalchemy[asyncio]>=2.0",
]

[project.scripts]
orvixa-feedcheck = "orvixa.runners.feedcheck:main"
orvixa-ingest = "orvixa.runners.ingest:main"
orvixa-symbols = "orvixa.runners.symbols:main"
orvixa-analytics = "orvixa.runners.analytics:main"
orvixa-backfill = "orvixa.runners.backfill:main"
orvixa-ingest-daemon = "orvixa.runners.daemon:run_ingest_daemon"
orvixa-analytics-daemon = "orvixa.runners.daemon:run_analytics_daemon"

[tool.hatch.build.targets.wheel]
packages = ["src/orvixa"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]
filterwarnings = ["error::DeprecationWarning:orvixa.*"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
disallow_untyped_defs = false

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-asyncio (>=1.4.0,<2.0.0)"
]
